--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             You will not be the first company that is using crypto but it would be nice to follow the lead from big players.
 										</p>
 
-											<div align="center">	
+											<div class="container" align="center">	
 												<!-- TradingView Widget BEGIN -->
 													<script defer src="https://www.livecoinwatch.com/static/lcw-widget.js" class="livecoinwatch-widget-3">
 														{
